\name{NEWS}
\title{News for \R Package \pkg{Pigenegene}}

\section{Changes in version 1.27.12 (2023-05-24)}{
  \subsection{Changes in existing functions}{
    \itemize{
      \item The \code{compress} argument is added to the \code{save.if()} function.
    }
  }
}

\section{Changes in version 1.27.2 (2023-05-12)}{
  \subsection{Changes in existing functions}{
    \itemize{
      \item The \code{compute.pigengene()} function does not warn about
      almost constant genes.
    }
  }
}

\section{Changes in version 1.25.16 (2023-03-22)}{
  \subsection{Changes in existing functions}{
    \itemize{
      \item Constant genes are now ignored in the
      \code{compute.pigengene(doWgcna=FALSE,...)} function to prevent a
      run time error. 
    }
  }
}

\section{Changes in version 1.25.12 (2023-03-02)}{
  \subsection{Changes in existing functions}{
    \itemize{
      \item The default value changed in
      \code{gene.mapping(leaveNA=FALSE, ...)}.
    }
  }
}

\section{Changes in version 1.25.10 (2023-01-04)}{
  \subsection{Changes in existing functions}{
    \itemize{
      \item The \code{doWgcna} option is added to the
      \code{compute.pigengene} function.
    }
  }
}

\section{Changes in version 1.25.4 (2022-12-01)}{
  \subsection{Changes in existing functions}{
    \itemize{
      \item The \code{get.enriched.pw} function
      adds gene symbols in the excel file.
    }
  }
}

\section{Changes in version 1.23.4 (2022-05-23)}{
  \subsection{Changes in existing functions}{
    \itemize{
      \item The beta table can now be suppressed in the
      \code{determine.modules} function.
    }
  }
}

\section{Changes in version 1.21.40 (2022-04-15)}{
  \subsection{Changes in existing functions}{
    \itemize{
      \item Habil changed the default value from
      \code{hu.mouse(host="useast.ensembl.org", ...)} to
      \code{hu.mouse(host="www.ensembl.org", ...)} to
      prevent a check error on Bioconductor.
    }
  }
}
  